make some parameter modifications

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<script type="text/javascript" src="js/jquery-1.7.2.min.js"></script>
 	<script type="text/javascript" src="js/webgl-debug.js"></script>
-	<script type="text/javascript" src="js/glMatrix-0.9.5.js"></script>
+	<script type="text/javascript" src="js/glMatrix-0.9.5.min.js"></script>
 	<script type="text/javascript" src="js/webgl-util.js"></script>
 	<script type="text/javascript" src="js/rbody.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
