--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="css/html5reset-1.6.1.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
-	<script type="text/javascript" src="js/lib/jquery-1.7.2.min.js"></script>
+	<script type="text/javascript" src="js/lib/jquery-1.10.2.js"></script>
 	<script type="text/javascript" src="js/lib/webgl-debug.js"></script>
 	<script type="text/javascript" src="js/lib/glMatrix-0.9.5.min.js"></script>
 	<script type="text/javascript" src="js/webgl-util.js"></script>
@@ -12,9 +12,7 @@
 	<script type="text/javascript" src="js/main.js"></script>
 	<title>shadow.js</title>
 	<script id="shadowPassVs" type="x-shader/x-vertex">
-#ifdef GL_ES
-precision highp float;
-#endif
+precision mediump float;
 
 attribute vec3    vertex;
 attribute vec3    normal;
@@ -32,9 +30,7 @@ void main(void) {
 }
 	</script>
 	<script id="shadowPassFs" type="x-shader/x-fragment">
-#ifdef GL_ES
-precision highp float;
-#endif
+precision mediump float;
 
 uniform sampler2D    texture;
 uniform      bool useTexture;
@@ -67,10 +63,6 @@ void main(void) {
 	</script>
 
 	<script id="lightPassVs" type="x-shader/x-vertex">
-#ifdef GL_ES
-precision highp float;
-#endif
-
 attribute vec3       vertex;
 attribute vec3       normal;
 attribute vec2     texCoord;
@@ -93,9 +85,7 @@ void main(void) {
 }
 	</script>
 	<script id="lightPassFs" type="x-shader/x-fragment">
-#ifdef GL_ES
-precision highp float;
-#endif
+precision mediump float;
 
 uniform sampler2D      depthTexture;
 uniform sampler2D           texture;
