add precision qualifier vertex shader

--- a/index.html
+++ b/index.html
@@ -63,6 +63,8 @@ void main(void) {
 	</script>
 
 	<script id="lightPassVs" type="x-shader/x-vertex">
+precision mediump float;
+
 attribute vec3       vertex;
 attribute vec3       normal;
 attribute vec2     texCoord;
